--- a/c/code-language/index.html
+++ b/c/code-language/index.html
@@ -42,7 +42,7 @@
 				Particularly blatant is the attempt to distort the historical record with code-word <q>explanations</q> when it comes to the <a href="/a/auschwitz/index.html">Auschwitz Camp</a>. This camp&rsquo;s documentation of comprehensive measures implemented to <i>save</i> inmates&rsquo; lives, particularly during the phase when mass murder allegedly occurred (1942-1944), is vast and incontrovertible. In the face of this, claims that some documents containing the term <q>special</q> meant mass murder are ludicrous.
 			</p>
 			<p>
-				(For more details on this, see the entries <a href="/special-treatment/index.html">special treatment</a>, <a href="/plans-orders/resettlement/index.html">resettlement</a>, <a href="/healthcare/index.html">healthcare</a>, <a href="/criminal-traces/index.html">criminal traces</a>, and the section <q>Documented History</q> of the entry on <a href="/b/birkenau/index.html">Birkenau</a>.)
+				(For more details on this, see the entries <a href="/special-treatment/index.html">special treatment</a>, <a href="/r/resettlement/index.html">resettlement</a>, <a href="/healthcare/index.html">healthcare</a>, <a href="/c/criminal-traces/index.html">criminal traces</a>, and the section <q>Documented History</q> of the entry on <a href="/b/birkenau/index.html">Birkenau</a>.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
