--- a/e/emigration/index.html
+++ b/e/emigration/index.html
@@ -95,7 +95,7 @@
 				When it became clear that there would be no peace in the West, and when Germany had large initial successes during its invasion of the Soviet Union, which the Germans expected to eventually collapse, plans for this Final Territorial Solution shifted toward the newly occupied territories in the East.
 			</p>
 			<p>
-				For more details on the German policy of deportation and resettlement to the East from late 1941 until 1943, see the entries on <a href="/resettlement/index.html">resettlement</a> and <a href="/categories/concepts/final-solution/index.html">Final Solution</a>.
+				For more details on the German policy of deportation and resettlement to the East from late 1941 until 1943, see the entries on <a href="/r/resettlement/index.html">resettlement</a> and <a href="/categories/concepts/final-solution/index.html">Final Solution</a>.
 			</p>
 			<h4>
 				<a id="Emigration_Figures"></a>Emigration Figures
