--- a/f/final-solution/index.html
+++ b/f/final-solution/index.html
@@ -33,7 +33,7 @@
 				Furthermore, many other documents addressing the question of what to do with the inmates in Germany&rsquo;s various camps confirm that no policy of physical extermination was in place.
 			</p>
 			<p>
-				For more information on this, see the table presented here with its references, as well as the entries on the <a href="/plans-orders/nisko-plan/index.html">Nisko Plan</a>, on <a href="/locations/other-locations/madagascar/index.html">Madagascar</a>, and on <a href="/plans-orders/resettlement/index.html">resettlement</a>.
+				For more information on this, see the table presented here with its references, as well as the entries on the <a href="/n/nisko-plan/index.html">Nisko Plan</a>, on <a href="/locations/other-locations/madagascar/index.html">Madagascar</a>, and on <a href="/r/resettlement/index.html">resettlement</a>.
 			</p>
 			<table class="table">
 				<caption>The Final Solution: Facts and Fiction</caption>
