--- a/i/intentionality/index.html
+++ b/i/intentionality/index.html
@@ -39,7 +39,7 @@
 				Whether any plans existed that were devised to turn such a potential intention into reality, is furthermore discussed in the following entries:
 			</p>
 			<ul>
-				<li><a href="/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
+				<li><a href="/p/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
 				<li><a href="/h/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
 			</ul>
 			<p>
@@ -48,7 +48,7 @@
 			<ul>
 				<li><a href="/categories/concepts/final-solution/index.html">Final Solution</a></li>
 				<li><a href="/emigration/index.html">Emigration</a></li>
-				<li><a href="/resettlement/index.html">Resettlement</a></li>
+				<li><a href="/r/resettlement/index.html">Resettlement</a></li>
 				<li><i>Einsatzgruppen,</i> section <q><a href="/e/einsatzgruppen/index.html#Extermination">Extermination</a> Order</q></li>
 			</ul>
 			<p>
