--- a/locations/camps/sobibor/index.html
+++ b/locations/camps/sobibor/index.html
@@ -681,7 +681,7 @@
 				Finally, there is plenty of anecdotal, material and documental evidence indicating that many Jews deported to Sobibór ended up elsewhere and very much alive. One of the most prominent among them is orthodox Sobibór historian <a href="/witnesses/expert/schelvis-jules/index.html">Jules Schelvis</a>, who was deported to Sobibór himself as a young man. At Sobibór, he was assigned to a labor group and transferred elsewhere. For him, Sobibór was a simple transit camp, as it was for thousands upon thousands of other Jewish deportees.
 			</p>
 			<p>
-				(For more details on the Sobibór Camp, see <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>; <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, pp. 215-236, 273-295; see also the entries on <a href="/transit-camps/index.html">transit camps</a> and <a href="/plans-orders/resettlement/index.html">resettlement</a> with further references.)
+				(For more details on the Sobibór Camp, see <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>; <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, pp. 215-236, 273-295; see also the entries on <a href="/transit-camps/index.html">transit camps</a> and <a href="/r/resettlement/index.html">resettlement</a> with further references.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
