--- a/locations/other-locations/madagascar/index.html
+++ b/locations/other-locations/madagascar/index.html
@@ -71,7 +71,7 @@
 				By May of 1942, the British had begun their invasion of Madagascar in order to take it out of the hands of the Vichy French government. The Brits completed their takeover in November of that year, effectively ending all German talk of a Madagascar Plan for the Jews.
 			</p>
 			<p>
-				(For details, see <a href="/bibliography/index.html#Jansen">Jansen 1997</a>; <a href="/bibliography/index.html#Brechtken">Brechtken 1998</a>; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 204-218; see also the entry on <a href="/plans-orders/resettlement/index.html">resettlement</a>.)
+				(For details, see <a href="/bibliography/index.html#Jansen">Jansen 1997</a>; <a href="/bibliography/index.html#Brechtken">Brechtken 1998</a>; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 204-218; see also the entry on <a href="/r/resettlement/index.html">resettlement</a>.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
