--- a/n/index.html
+++ b/n/index.html
@@ -28,7 +28,7 @@
 					<li><a href="/persons/politician/nebe-arthur/index.html">Nebe, Arthur</a></li>
 					<li><a href="/locations/country/netherlands/index.html">Netherlands</a></li>
 					<li><a href="/n/neuengamme/index.html">Neuengamme</a></li>
-					<li><a href="/plans-orders/nisko-plan/index.html">Nisko Plan</a></li>
+					<li><a href="/n/nisko-plan/index.html">Nisko Plan</a></li>
 					<li><a href="/instruments/camp/phantom-camp/nordhausen/index.html">Nordhausen</a></li>
 					<li><a href="/locations/country/norway/index.html">Norway</a></li>
 					<li><a href="/witnesses/victim/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
