--- a/persons/politician/goebbels-joseph/index.html
+++ b/persons/politician/goebbels-joseph/index.html
@@ -63,7 +63,7 @@
 				</p>
 			</blockquote>
 			<p>
-				No word of mass murder on arrival at <a href="/t/treblinka/index.html">Treblinka</a>. Rather, they have been deported and <a href="/plans-orders/resettlement/index.html">resettled</a> to the East.
+				No word of mass murder on arrival at <a href="/t/treblinka/index.html">Treblinka</a>. Rather, they have been deported and <a href="/r/resettlement/index.html">resettled</a> to the East.
 			</p>
 			<p>
 				Goebbels&rsquo;s diaries have a total of 123 passages where he talks about the Jews and their fate under National-Socialist rule. Except for two entries, they consistently refer only to expulsion and deportation, not to extermination.
