--- a/h/himmler-speeches/index.html
+++ b/h/himmler-speeches/index.html
@@ -24,7 +24,7 @@
 				Heinrich Himmler, chief of the Third Reich&rsquo;s SS and police forces, had an obsession with delivering endless speeches. Many if not most of his speeches were delivered in front of non-public audiences usually consisting of high-profile personalities of politics and military. The topics Himmler covered reach from the mundane to the top secret. Surprisingly, many of these speeches were recorded and have been preserved, both as sound recordings and as transcripts. It is as if Himmler did not want to keep top secret issues a secret, but rather have them eventually announced to the world.
 			</p>
 			<p>
-				When it comes to the treatment of the Jews, Himmler&rsquo;s attitude underwent a remarkable shift from late 1942 to late 1943. In 1942, he was talking about the National-Socialist policy of deportation and <a href="/plans-orders/resettlement/index.html">resettlement</a>. For instance, in a speech of 23 November 1942, he stated:
+				When it comes to the treatment of the Jews, Himmler&rsquo;s attitude underwent a remarkable shift from late 1942 to late 1943. In 1942, he was talking about the National-Socialist policy of deportation and <a href="/r/resettlement/index.html">resettlement</a>. For instance, in a speech of 23 November 1942, he stated:
 			</p>
 			<blockquote>
 				<p>
