--- a/r/index.html
+++ b/r/index.html
@@ -38,7 +38,7 @@
 						<li><a href="/legal/institution/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
 						<li><a href="/categories/concepts/religion-holocaust-as/index.html">Religion, Holocaust as</a></li>
 						<li><a href="/witnesses/victim/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
-						<li><a href="/plans-orders/resettlement/index.html">Resettlement</a></li>
+						<li><a href="/r/resettlement/index.html">Resettlement</a></li>
 						<li><a href="/persons/propagandist/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
 						<li><a href="/witnesses/victim/rogerie-andre/index.html">Rogerie, André</a></li>
 						<li><a href="/witnesses/victim/rogner-adolf/index.html">Rögner, Adolf</a></li>
