--- a/c/concentration-camps/index.html
+++ b/c/concentration-camps/index.html
@@ -45,7 +45,7 @@
 				<li><a href="/mauthausen/index.html">Mauthausen</a></li>
 				<li><a href="/natzweiler/index.html">Natzweiler</a></li>
 				<li><a href="/neuengamme/index.html">Neuengamme</a></li>
-				<li><a href="/phantom-camp/nordhausen/index.html">Nordhausen</a></li>
+				<li><a href="/n/nordhausen/index.html">Nordhausen</a></li>
 				<li><a href="/mixed-purpose-camp/ravensbruck/index.html">Ravensbrück</a></li>
 				<li><a href="/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a></li>
 				<li><a href="/locations/camps/stutthof/index.html">Stutthof</a></li>
