--- a/e/extermination-camps/index.html
+++ b/e/extermination-camps/index.html
@@ -87,7 +87,7 @@
 						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td><a href="/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></td>
+						<td><a href="/g/gross-rosen/index.html">Gross-Rosen</a></td>
 						<td> phantom </td>
 						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
@@ -137,7 +137,7 @@
 						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td> <a href="/phantom-camp/nordhausen/index.html">Nordhausen</a> </td>
+						<td> <a href="/n/nordhausen/index.html">Nordhausen</a> </td>
 						<td> phantom </td>
 						<td> massacres </td>
 					</tr>
