--- a/g/index.html
+++ b/g/index.html
@@ -55,7 +55,7 @@
 						<li><a href="/witnesses/victim/grocher-mietek/index.html">Grocher, Mietek</a></li>
 						<li><a href="/witnesses/victim/grojanowski-jakov/index.html">Grojanowski, Jakov</a></li>
 						<li><a href="/witnesses/perpetrator/groning-oskar/index.html">Gröning, Oskar</a></li>
-						<li><a href="/instruments/camp/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></li>
+						<li><a href="/g/gross-rosen/index.html">Gross-Rosen</a></li>
 						<li><a href="/persons/grossman-vasily/index.html">Grossman, Vasily</a></li>
 						<li><a href="/categories/concepts/groundwater-level/index.html">Groundwater Level</a></li>
 						<li><a href="/witnesses/victim/gruner-miklos/index.html">Grüner, Miklós</a></li>
