--- a/n/index.html
+++ b/n/index.html
@@ -29,7 +29,7 @@
 					<li><a href="/locations/country/netherlands/index.html">Netherlands</a></li>
 					<li><a href="/n/neuengamme/index.html">Neuengamme</a></li>
 					<li><a href="/n/nisko-plan/index.html">Nisko Plan</a></li>
-					<li><a href="/instruments/camp/phantom-camp/nordhausen/index.html">Nordhausen</a></li>
+					<li><a href="/n/nordhausen/index.html">Nordhausen</a></li>
 					<li><a href="/locations/country/norway/index.html">Norway</a></li>
 					<li><a href="/witnesses/victim/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
 					<li><a href="/legal/trial/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li>
