--- a/witnesses/witnesses/index.html
+++ b/witnesses/witnesses/index.html
@@ -83,7 +83,7 @@
 				<li><a href="/perpetrator/christophersen-thies/index.html">Christophersen, Thies</a> (SS)</li>
 				<li><a href="/witnesses/victim/chybinski-stanislaw/index.html">Chybiński, Stanisław</a></li>
 				<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
-				<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
+				<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
 				<li><a href="/witnesses/victim/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
 				<li><a href="/perpetrator/dejaco-walter/index.html">Dejaco, Walter</a> (SS)</li>
 				<li><a href="/witnesses/victim/dibowski-wilhelm/index.html">Dibowski, Wilhelm</a></li>
@@ -194,7 +194,7 @@
 				<a id="Belzec"></a><a href="/b/belzec/index.html">Belzec</a>
 			</h4>
 			<ul>
-				<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
+				<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
 				<li>Fuchs, Erich (SS)</li>
 				<li><a href="/perpetrator/gerstein-kurt/index.html">Gerstein, Kurt</a> (SS)</li>
 				<li>Gley, Heinrich (SS)</li>
@@ -250,7 +250,7 @@
 				<i><a id="Einsatzgruppen"></a>Einsatzgruppen</i>
 			</h4>
 			<ul>
-				<li><a href="/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a> (SS)</li>
+				<li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a> (SS)</li>
 				<li><a href="/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a> (SS)</li>
 				<li><a href="/perpetrator/ohlendorf-otto/index.html">Ohlendorf, Otto</a> (SS)</li>
 				<li><a href="/witnesses/victim/pronicheva-dina/index.html">Pronicheva, Dina</a></li>
@@ -276,7 +276,7 @@
 				<li><a href="/perpetrator/widmann-albert/index.html">Widmann, Albert</a> (SS)</li>
 			</ul>
 			<h4>
-				<a id="Gross"></a><a href="/instruments/camp/phantom-camp/gross-rosen/index.html">Gross-Rosen</a>
+				<a id="Gross"></a><a href="/g/gross-rosen/index.html">Gross-Rosen</a>
 			</h4>
 			<ul>
 				<li><a href="/witnesses/victim/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
@@ -317,7 +317,7 @@
 				<a id="Mogilev"></a><a href="/m/mogilev/index.html">Mogilev</a>
 			</h4>
 			<ul>
-				<li><a href="/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a> (SS)</li>
+				<li><a href="/b/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a> (SS)</li>
 			</ul>
 			<h4>
 				<a id="Natzweiler"></a><a href="/n/natzweiler/index.html">Natzweiler</a>
