--- a/c/index.html
+++ b/c/index.html
@@ -47,7 +47,7 @@
 						<li><a href="/c/crematoria/index.html">Crematoria</a></li>
 						<li><a href="/c/criminal-traces/index.html">Criminal Traces</a></li>
 						<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
-						<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
+						<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
 						<li><a href="/witnesses/victim/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
 						<li><a href="/persons/propagandist/czech-danuta/index.html">Czech, Danuta</a></li>
 						<li><a href="/locations/country/czechia/index.html">Czechia</a></li>
