--- a/p/phantom-extermination-camps/index.html
+++ b/p/phantom-extermination-camps/index.html
@@ -27,11 +27,11 @@
 				<li><a href="/other-camp/bergen-belsen/index.html">Bergen-Belsen</a> (false gas-chamber claims)</li>
 				<li><a href="/b/buchenwald/index.html">Buchenwald</a> (false gas-chamber claims)</li>
 				<li><a href="/f/flossenburg/index.html">Flossenbürg</a> (false gas-chamber claims)</li>
-				<li><a href="/phantom-camp/gross-rosen/index.html">Gross-Rosen</a> (false gas-chamber claims)</li>
+				<li><a href="/g/gross-rosen/index.html">Gross-Rosen</a> (false gas-chamber claims)</li>
 				<li><a href="/k/kosow-podlaski/index.html">Kosów Podlaski</a> (invented camp)</li>
 				<li><a href="/l/lviv/index.html">Lviv</a> (invented camp)</li>
 				<li><a href="/m/mogilev/index.html">Mogilev</a> (false gas-chamber claims)</li>
-				<li><a href="/phantom-camp/nordhausen/index.html">Nordhausen</a> (false massacre claims)</li>
+				<li><a href="/n/nordhausen/index.html">Nordhausen</a> (false massacre claims)</li>
 				<li><a href="/p/pinsk/index.html">Pinsk</a> (invented camp)</li>
 				<li><a href="/t/trawniki/index.html">Trawniki</a> (false gas-chamber claims)</li>
 				<li><a href="/phantom-camp/wolzek/index.html">Wolzek</a> (invented camp)</li>
