--- a/f/farber-yuri/index.html
+++ b/f/farber-yuri/index.html
@@ -39,7 +39,7 @@
 				Moreover, since there was room only for one worker lying on his belly, this prostrate worker had to dig almost (200m/68 days=) three meters a day. Since all inmates had to work during the entire day on exhuming and cremating corpses with all the concomitant work (chopping wood, hauling wood and corpses, crushing bones etc.), they all would have been utterly exhausted in the evening. Hence, no one would have had any energy left for such intense digging work performed under low-oxygen conditions.
 			</p>
 			<p>
-				Another witness of the same event, <a href="/gol-szloma/index.html">Szloma Gol</a>, was more realistic, or perhaps only less imaginative, by claiming that they dug the tunnel with their bare hands. A further witness, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a>, asserted that, after a while of digging with bare hands, they switched to using a tablespoon.
+				Another witness of the same event, <a href="/g/gol-szloma/index.html">Szloma Gol</a>, was more realistic, or perhaps only less imaginative, by claiming that they dug the tunnel with their bare hands. A further witness, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a>, asserted that, after a while of digging with bare hands, they switched to using a tablespoon.
 			</p>
 			<p>
 				Farber claimed that the corpses were extracted from the graves by a person outside the grave by throwing a hook down into the grave, and if by chance a corpse or body part got hooked, he pulled it out. The same absurd corpse-fishing game was described by <a href="/a/amiel-szymon/index.html">Szymon Amiel</a> and <a href="/e/edelman-salman/index.html">Salman Edelman</a> in a testimony also published in <i>The Black Book.</i> This is a case of convergence of evidence on a lie, probably because the witnesses testifying for the NKGB &mdash; which were <i>The Black Book</i>&rsquo;s sources &mdash; had a chance to <q>learn</q> from one another and from their interrogators.
@@ -48,7 +48,7 @@
 				Farber&rsquo;s description of the pyres they allegedly built is peculiar. Each had an outer scaffold of wooden logs, and in its center a chimney(?) made of pine trunks &mdash; for some unknown purpose. He asserted that 3,500 bodies were placed on a pyre measuring 7 m &times; 7 m, and was some four meters high. If the pyre had a cuboid shape, its volume would have been (7 m &times; 7 m &times; 4 m =) 196 cubic meters. If we assume for each heavily decomposed body a volume of only 26 liters (hence a mass of 26 kg), 3,500 of them, stacked with 40% gaps in between, would have occupied (3,500 bodies &times; 0.026 m&sup3;/body &times; 1.4 =) around 127 cubic meters, leaving less than 70 m&sup3; for the wood. However, Farber claimed that his pyres were pyramidal in shape. In that case, there would have been <i>no</i> space left for any wood. Clearly, his pyres would not have burned, let alone reduced the corpses to ashes.
 			</p>
 			<p>
-				The alleged pyramidal shape of the pyre with a wooden chimney at the top was also claimed by <a href="/gol-szloma/index.html">Szloma Gol</a>, who testified 2 years after Farber.
+				The alleged pyramidal shape of the pyre with a wooden chimney at the top was also claimed by <a href="/g/gol-szloma/index.html">Szloma Gol</a>, who testified 2 years after Farber.
 			</p>
 			<p>
 				Farber moreover claimed that one prisoner was standing right next the burning pyre with a spade, stoking the wood and bodies <q>to make sure that the fire did not die out.</q> That person would have burned to a crisp, if such a pyre had burned so hot that it reduced all wood and bodies to ashes, as he claimed it did.
@@ -71,7 +71,7 @@
 				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates conclusively that Farber&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
-				(See also the similar accounts by <a href="/blyazer-a/index.html">A. Blyazer</a>, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 670-677.)
+				(See also the similar accounts by <a href="/blyazer-a/index.html">A. Blyazer</a>, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/g/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 670-677.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
