--- a/z/zaydel-matvey/index.html
+++ b/z/zaydel-matvey/index.html
@@ -42,7 +42,7 @@
 				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Zaydel&rsquo;s scenario is detached from reality. Its claimed dimensions cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
-				(See also the similar accounts by <a href="/farber-yuri/index.html">Yuri Farber</a>, <a href="/blyazer-a/index.html">A. Blyazer</a> and <a href="/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 679f., 683-688.)
+				(See also the similar accounts by <a href="/farber-yuri/index.html">Yuri Farber</a>, <a href="/blyazer-a/index.html">A. Blyazer</a> and <a href="/g/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 679f., 683-688.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
